Bugfix: if the page loaded slowly, SmallScreenNavigation elements would appear expanded until the loading ended

--- a/woost/views/resources/styles/SmallScreenNavigation.scss
+++ b/woost/views/resources/styles/SmallScreenNavigation.scss
@@ -65,7 +65,7 @@
         }
     }
 
-    &[data-menu-state=''] {
+    &:not([data-menu-state='expanded']) {
         .small_screen_popup {
             @include scripting-enabled {
                 height: 0;
