--- a/woost/views/resources/styles/baseview.scss
+++ b/woost/views/resources/styles/baseview.scss
@@ -1,4 +1,5 @@
 
+@import "cocktail://styles/utils";
 @import "theme://";
 
 .TextBlockView {
@@ -11,7 +12,7 @@
 
     .image_gallery .image_entry {
         margin: 0;
-        margin-right: 1em;
+        @include margin-end(1em);
         margin-bottom: 1em;
     }
 
@@ -26,7 +27,7 @@
             vertical-align: top;
 
             & > a {
-                text-align: left;
+                @include text-align-start;
             }
         }
     }
@@ -38,30 +39,30 @@
             vertical-align: top;
 
             & > a {
-                text-align: right;
+                @include text-align-end;
             }
         }
 
         .image_list {
-            text-align: right;
+            @include text-align-end;
         }
     }
 
     &.float_top_left {
 
         .image_gallery {
-            float: left;
+            @include float-start;
         }
     }
 
     &.float_top_right {
 
         .image_gallery {
-            float: right;
+            @include float-end;
 
             .image_entry {
-                margin-right: 0;
-                margin-left: 1em;
+                @include margin-end(0);
+                @include margin-start(1em);
             }
         }
     }
@@ -78,8 +79,8 @@
 
     &.column_right {
         .image_gallery .image_entry {
-            margin-right: 0;
-            margin-left: 1em;
+            @include margin-start(1em);
+            @include margin-end(0);
         }
     }
 
@@ -162,7 +163,7 @@
 
         .AudioPlayer  {
             width: 12em !important;
-            margin-left: 4em;
+            @include margin-start(4em);
 
             .mejs-controls {
 
