Internal refactoring of the user actions system.
The add_integral action was broken: it used a link to pass the desired type for
the new object on its query string. Since it didn't use a POST, unsaved form
data was not entered into the edit stack and was therefore lost.

To fix this, user actions can now receive parameters (such as said type, or the
relation they work uppon). This has caused many changes:

- The POST format for user actions changes; it can now include extra parameters
  and reference other form fields in the part that designates the selected
  targets
- All the logic to select and activate a user action based on the current
  request has been moved to BaseBackOfficeController. Removed specific logic in
  ContentController, EditController, EditBlocksController, ChangeLogController
  and ItemFieldsController.
- Changes to the ActionBar class:
  - Removed the 'action_parameter' property
  - Removed the 'submit_action_target' property
  - Added the 'selection_field' property
  - Added the 'relation' property
  - Added the 'hide_disabled_actions' property
- Changes to the UserAction class:
  - Changed the signature of get_errors()
  - Changed the signature of invoke()
  - Added the get_parameters_schema() method
  - Added the get_parameter_members() method
  - get_dropdown_panel() now receives a reference to an ActionBar instead of the
    action's target
- New actions and abstract base classes:
  - CreateAction
  - SelectRelatedObjectAction
  - RelateNewIntegralObjectAction
  - AddNewAction (replaces AddIntegralAction)
  - PickAction
  - PickNewAction
  - UnlinkAction
- Reimplemented ItemSelector as CML template, use an ActionBar instead of a
  custom set of buttons
- The dropdown menu for the new and add_new (the old add_integral) actions is
  now defined by the get_dropdown_panel() of their CreateAction base class.
  Until now it was replicated in several places.

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -137,7 +137,9 @@ body {
 .BackOfficeLayout .user_views_bar .add_user_view_button,
 .BackOfficeLayout .advanced_search,
 .BackOfficeEditView .discard_button,
-.BackOfficeFieldsView .ItemSelector-button {
+.BackOfficeFieldsView .ItemSelector .action_button,
+.BackOfficeFieldsView .ItemSelector .DropdownPanel > .button > .label,
+.BackOfficeNewItemTypeSelector button {
     font-size: inherit;
     background: none;
     border: none;
@@ -563,6 +565,11 @@ body.modal {
     height: auto;
 }
 
+.BackOfficeNewItemTypeSelector li button.entry_label {
+    padding: 0;
+    width: auto;
+}
+
 /* Forms
 -----------------------------------------------------------------------------*/
 .BackOfficeLayout fieldset {
@@ -785,7 +792,7 @@ body.modal {
 
 .BackOfficeLayout .Form td .control,
 .BackOfficeLayout .Form td .mceEditor .mceLayout,
-.BackOfficeLayout .Form td .ItemSelector button {
+.BackOfficeLayout .Form td .ItemSelector .action_button {
     width: 100%;
 }
 
@@ -2332,8 +2339,9 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
 }
 
 .BackOfficeLayout .ItemSelector .selection_wrapper,
-.BackOfficeLayout .ItemSelector-buttons {
+.BackOfficeLayout .ItemSelector .buttons {
     display: inline-block;
+    padding: 0;
 }
 
 .BackOfficeLayout .ItemSelector .selection_wrapper {
@@ -2345,17 +2353,23 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
     margin-right: 0;
 }
 
-.BackOfficeFieldsView .ItemSelector-button {
-    margin-right: 0.6em;
+.BackOfficeFieldsView .ItemSelector .action_button {
+    margin-right: 1em;
     display: inline-block;
+    width: auto;
 }
 
-.BackOfficeFieldsView button.ItemSelector-button,
-.BackOfficeFieldsView .ItemSelector .new .label {
+.BackOfficeFieldsView .ItemSelector .DropdownPanel > .button {
+    width: auto;
+    font-size: 1em;
+}
+
+.BackOfficeFieldsView .ItemSelector .action_button,
+.BackOfficeFieldsView .ItemSelector .DropdownPanel > .button > .label {
     font-size: 90%;
 }
 
-.BackOfficeFieldsView .ItemSelector-button .icon {
+.BackOfficeFieldsView .ItemSelector .action_button .icon {
     vertical-align: middle;
     margin-right: 0.3em;
 }
@@ -2390,7 +2404,7 @@ body.scripted .BackOfficeLayout .ThumbnailsContentView .collection_display input
     display: none;
 }
 
-.BackOfficeFieldsView .ItemSelector button,
+.BackOfficeFieldsView .ItemSelector .action_button,
 button.TypeSelectorButton {
     text-align: left;
 }
@@ -2788,7 +2802,7 @@ button.TypeSelectorButton span {
     width: auto;
 }
 
-.BackOfficeLayout .CollectionView .filters .ItemSelector button,
+.BackOfficeLayout .CollectionView .filters .ItemSelector .action_button,
 button.TypeSelectorButton {
     font-size: 95%;
 }
