Allow container blocks to have a link
- Added the ContainerBlock.link_destination member
- Added the ContainerBlock.link_parameters member
- Added the ContainerBlock.link_opens_in_new_window member

--- a/woost/views/resources/styles/baseview.scss
+++ b/woost/views/resources/styles/baseview.scss
@@ -2,6 +2,14 @@
 @import "cocktail://styles/utils";
 @import "theme://";
 
+.ContainerBlockView {
+
+    & > .block_link {
+        display: block;
+        text-decoration: none;
+    }
+}
+
 .TextBlockView {
     overflow: hidden;
 
