Make sure the checkboxes of ItemCollectionEditor remain hidden

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -480,7 +480,7 @@ body {
 }
 
 .scripted .ItemCollectionEditor .checkbox_wrapper input[type=checkbox] {
-    position: absolute;
+    position: fixed;
     left: -100px;
     top: -100px;
 }
