Style fixes for MappingEditor in the backoffice

--- a/woost/views/resources/styles/backoffice.css
+++ b/woost/views/resources/styles/backoffice.css
@@ -1380,13 +1380,25 @@ body.scripted .BackOfficeLayout .Table .row_selection_control {
 }
 
 .BackOfficeLayout .MappingEditor .key_control {
-    margin-right: 2em;
+    margin-right: 1em;
 }
 
 .BackOfficeLayout .MappingEditor .key_control,
 .BackOfficeLayout .MappingEditor .value_control {
     display: inline-block;
     vertical-align: middle;
+}
+
+.BackOfficeLayout .MappingEditor .remove_button {
+    margin-left: 1em;
+}
+
+.BackOfficeLayout .MappingEditor > .entries > .entry + .entry {
+    margin-top: 0.5em;
+}
+
+.BackOfficeLayout .MappingEditor .entries:not(:empty) + .add_button {
+    margin-top: 0.5em;
 }
 
 .BackOfficeEditView .tab_strip {
