Fixed item selection in ItemSetSelector

--- a/woost/admin/ui/itemsetselector.ui
+++ b/woost/admin/ui/itemsetselector.ui
@@ -30,6 +30,7 @@
     </ui:cocktail.ui.ActionList>
 
     <?js
+    this.selectionContainer = this.list;
     this.toolbar.selectable = this;
     ?>
 
