--- a/woost/admin/ui/layout.ui
+++ b/woost/admin/ui/layout.ui
@@ -14,6 +14,7 @@
     <ui:requires component="woost.admin.ui.ItemSetSelector"/>
     <ui:requires component="woost.admin.ui.Autocomplete"/>
     <ui:requires component="woost.admin.ui.Listing"/>
+    <ui:requires component="woost.admin.ui.RelationSelector"/>
     <ui:requires component="woost.admin.ui.EditView"/>
     <ui:requires component="woost.admin.ui.BlocksView"/>
 
