--- a/woost/admin/ui/relationselector.ui
+++ b/woost/admin/ui/relationselector.ui
@@ -3,7 +3,7 @@
 <ui:woost.admin.ui.Listing
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:ui="http://www.whads.com/ns/cocktail/ui"
-    defaultAction="add-selection">
+    defaultAction="accept-selection">
 
     <?class
     get actionSlotPrefix() {
