Hide the 'clear' action until an object is selected

--- a/woost/admin/ui/itemselector.ui
+++ b/woost/admin/ui/itemselector.ui
@@ -30,6 +30,11 @@
     }));
     ?>
 
+    <?on value:changed
+    this.actionList.actionParameters.item = newValue;
+    this.actionList.updateEntries();
+    ?>
+
     <?js
     this.linkDisplay(this.autocomplete);
     ?>
