Hide collection actions if the collection is empty

--- a/woost/admin/ui/itemsetselector.ui
+++ b/woost/admin/ui/itemsetselector.ui
@@ -21,6 +21,12 @@
     }));
     ?>
 
+    <?on value:changed
+    this.toolbar.actionParameters.items = newValue;
+    this.toolbar.actionParameters.collectionIsEmpty = cocktail.isEmptyValue(newValue);
+    this.toolbar.updateEntries();
+    ?>
+
     <ui:cocktail.ui.ActionList
         id="toolbar"
         ui:placement="before list">
