Style and focus fixes for ItemSelector

--- a/woost/admin/ui/itemselector.ui
+++ b/woost/admin/ui/itemselector.ui
@@ -2,11 +2,16 @@
 
 <div
     xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:ui="http://www.whads.com/ns/cocktail/ui">
+    xmlns:ui="http://www.whads.com/ns/cocktail/ui"
+    tabindex="0">
 
     <ui:using mixin="cocktail.ui.DataDisplay"/>
 
-    <ui:woost.admin.ui.Autocomplete id="autocomplete"/>
+    <ui:woost.admin.ui.Autocomplete id="autocomplete">
+        <?js
+        element.removeAttribute("tabindex");
+        ?>
+    </ui:woost.admin.ui.Autocomplete>
 
     <ui:cocktail.ui.ActionList id="actionList">
         <?js
@@ -14,6 +19,10 @@
         element.classList.add("without-frame");
         ?>
     </ui:cocktail.ui.ActionList>
+
+    <?tail
+    cls.delegatesFocus = true;
+    ?>
 
     <?class
     clearValue() {
