Extend the actions available to ItemSelector

--- a/woost/admin/ui/itemselector.ui
+++ b/woost/admin/ui/itemselector.ui
@@ -40,7 +40,7 @@
     ?>
 
     <?on value:changed
-    this.actionList.actionParameters.item = newValue;
+    this.actionList.actionParameters.selection = newValue ? [newValue] : null;
     this.actionList.updateEntries();
     ?>
 
