Implemented the 'refresh' action

--- a/woost/admin/ui/listing.ui
+++ b/woost/admin/ui/listing.ui
@@ -22,7 +22,8 @@
         return Array.from(woost.admin.actions.forContext({
             view: this,
             slot: this.actionSlotPrefix + "Toolbar",
-            model: this.model
+            model: this.model,
+            selectable: this.table
         }));
     }
 
@@ -30,7 +31,8 @@
         return Array.from(woost.admin.actions.forContext({
             view: this,
             slot: this.actionSlotPrefix + "Controls",
-            model: this.model
+            model: this.model,
+            selectable: this.table
         }));
     }
 
