--- a/woost/admin/ui/resources/styles/woost-admin-ui-itemselector.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-itemselector.scss
@@ -2,8 +2,7 @@
 @import "woost.admin.ui://styles/common";
 
 :host {
-    display: inline-flex;
-    flex-direction: row;
+    display: inline-block;
 }
 
 :host(:focus) {
@@ -14,6 +13,10 @@
     }
 }
 
+#actionList {
+    margin-bottom: 0.2em;
+}
+
 #autocomplete {
     border: 1px solid #ddd;
     cursor: pointer;
@@ -21,9 +24,5 @@
     &:hover {
         border-color: $focus-color;
     }
-}
-
-#actionList {
-    margin-left: 1em;
 }
 
