--- a/woost/admin/ui/itemlink.ui
+++ b/woost/admin/ui/itemlink.ui
@@ -6,6 +6,7 @@
     href="javascript:">
 
     <ui:using mixin="cocktail.ui.DataDisplay"/>
+    <ui:using mixin="woost.admin.ui.ContextMenuSource"/>
 
     <ui:property
         name="empty"
