--- a/woost/admin/ui/listing.ui
+++ b/woost/admin/ui/listing.ui
@@ -230,7 +230,18 @@
         selectionType="multiple"
         paging="infiniteScroll">
 
+        <ui:using mixin="woost.admin.ui.ContextMenuSource"/>
+
         <?class
+        resolveContextMenuTarget(e) {
+            for (let element of e.path) {
+                if (element.classList.contains("cocktail-ui-Table-Row")) {
+                    return element;
+                }
+            }
+            return null;
+        }
+
         getDataSourceOptions(page) {
             let options = super.getDataSourceOptions(page);
             let listing = this.parentInstance;
