Support double click in ItemSelector

--- a/woost/admin/ui/itemselector.ui
+++ b/woost/admin/ui/itemselector.ui
@@ -44,6 +44,12 @@
     this.actionList.updateEntries();
     ?>
 
+    <?on dblclick
+    if (this.value) {
+        this.actionList.getAction("edit").invoke({selection: [this.value]});
+    }
+    ?>
+
     <?js
     this.linkDisplay(this.autocomplete);
     ?>
