--- a/woost/admin/ui/resources/styles/woost-admin-ui-itemselector.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-itemselector.scss
@@ -2,7 +2,8 @@
 @import "woost.admin.ui://styles/common";
 
 :host {
-    display: inline-block;
+    display: inline-flex;
+    flex-direction: row;
 }
 
 :host(:focus) {
@@ -13,10 +14,6 @@
     }
 }
 
-#actionList {
-    margin-bottom: 0.2em;
-}
-
 #autocomplete {
     border: 1px solid #ddd;
     cursor: pointer;
@@ -24,5 +21,9 @@
     &:hover {
         border-color: $focus-color;
     }
+}
+
+#actionList {
+    margin-left: 1em;
 }
 
