Make padding more consistent

--- a/woost/admin/ui/resources/styles/woost-admin-ui-stacknode.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-stacknode.scss
@@ -90,6 +90,10 @@ $covered-heading-padding-top: 0.6em;
     align-items: center;
     justify-content: center;
     color: rgba(#111, 0.4);
+
+    &:not([src]) {
+        display: none;
+    }
 }
 
 .Heading .label {
