--- a/woost/admin/ui/itemcard.ui
+++ b/woost/admin/ui/itemcard.ui
@@ -61,6 +61,12 @@
     activate() {
         cocktail.navigation.extendPath(this.value.id);
     }
+
+    invalidation(change) {
+        if (change.type == "modify") {
+            this.value = change.newState;
+        }
+    }
     ?>
 
     <?on value:changed
