--- a/woost/admin/ui/autocomplete.ui
+++ b/woost/admin/ui/autocomplete.ui
@@ -46,5 +46,11 @@
     }
     ?>
 
+    <?on errors:changed
+    if (this.itemCard.dataBinding) {
+        this.itemCard.errors = newValue;
+    }
+    ?>
+
 </ui:cocktail.ui.Autocomplete>
 
