Implemented object saving

--- a/woost/admin/ui/layout.ui
+++ b/woost/admin/ui/layout.ui
@@ -9,6 +9,8 @@
     <ui:requires component="cocktail.ui.DataDisplay"/>
     <ui:requires component="cocktail.ui.datasources"/>
     <ui:requires component="cocktail.ui.navigation"/>
+    <ui:requires component="cocktail.ui.Lock"/>
+    <ui:requires component="cocktail.ui.Notice"/>
     <ui:requires component="woost.admin.ui.ItemLink"/>
     <ui:requires component="woost.admin.ui.ItemCard"/>
     <ui:requires component="woost.admin.ui.ItemSetSelector"/>
